// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-member-type-batch should get a single member type with full configuration 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "alias": "testbatchmembertype",
        "allowedAsRoot": false,
        "collection": null,
        "compositions": [],
        "containers": [],
        "description": null,
        "icon": "icon-user",
        "id": "00000000-0000-0000-0000-000000000000",
        "isElement": false,
        "name": "_Test Batch MemberType",
        "properties": [],
        "variesByCulture": false,
        "variesBySegment": false,
      },
    ],
    "total": 1,
  },
}
`;

exports[`get-member-type-batch should get multiple member types in a single request 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "alias": "testbatchmembertype",
        "allowedAsRoot": false,
        "collection": null,
        "compositions": [],
        "containers": [],
        "description": null,
        "icon": "icon-user",
        "id": "00000000-0000-0000-0000-000000000000",
        "isElement": false,
        "name": "_Test Batch MemberType",
        "properties": [],
        "variesByCulture": false,
        "variesBySegment": false,
      },
      {
        "alias": "testbatchmembertype2",
        "allowedAsRoot": false,
        "collection": null,
        "compositions": [],
        "containers": [],
        "description": null,
        "icon": "icon-user",
        "id": "00000000-0000-0000-0000-000000000000",
        "isElement": false,
        "name": "_Test Batch MemberType2",
        "properties": [],
        "variesByCulture": false,
        "variesBySegment": false,
      },
    ],
    "total": 2,
  },
}
`;
